Fix uneven feature card This sets the height of the features' card to be the same regardless of screen size.

--- a/docs/_sass/_elements.scss
+++ b/docs/_sass/_elements.scss
@@ -92,7 +92,7 @@
 	padding: .5rem .5rem .5rem .5rem;
 }
 .about-subitem .inner {
-	min-height: 24.5rem;
+	min-height: 31rem;
 	padding: 2.5rem;
 	box-shadow: 0 .2rem .4rem rgba(0,0,0,.1);
 	margin: 0 1.0rem 3.0rem;
